--- a/action.yml
+++ b/action.yml
@@ -10,6 +10,9 @@ inputs:
   issue_text:
     description: "So GPT knows what needs to be done"
     required: true
+  path:
+    description: "Path to the file that needs to be changed"
+    required: true
 outputs:
   commit_message:
     description: "The commit message"
@@ -32,5 +35,5 @@ runs:
     - name: "Let GPT do the work"
       id: gpt
       run: |
-        python gpt.py ${{ inputs.openai_api_key }} ${{ inputs.issue_number }} ${{ inputs.issue_text }}
+        python gpt.py ${{ inputs.openai_api_key }} ${{ inputs.issue_number }} ${{ inputs.issue_text }} ${{ inputs.path }}
       shell: bash
