--- a/action.yml
+++ b/action.yml
@@ -26,7 +26,7 @@ runs:
         python-version: 3.11
     - name: "Install Python dependencies"
       run: |
-        pip install -r requirements.txt
+        pip install openai
       shell: bash
     - name: "Install Prettier"
       run: |
