--- a/action.yml
+++ b/action.yml
@@ -16,10 +16,10 @@ inputs:
 outputs:
   commit_message:
     description: "The commit message"
-    value: ${{ steps.gpt.outputs.commit-message }}
+    value: ${{ steps.gpt.outputs.commit_message }}
   exit_message:
     description: "The exit message, in case GPT thinks it needs to stop and let you know"
-    value: ${{ steps.gpt.outputs.exit-message }}
+    value: ${{ steps.gpt.outputs.exit_message }}
 runs:
   using: "composite"
   steps:
@@ -39,8 +39,6 @@ runs:
       id: gpt
       run: |
         python $GITHUB_ACTION_PATH/gpt.py "${{ inputs.openai_api_key }}" "${{ inputs.issue_number }}" "${{ inputs.issue_text }}" "${{ inputs.path }}"
-        if [ -f "commit-message.txt" ]; then echo "commit_message=$(cat commit-message.txt)" >> $GITHUB_OUTPUT; else echo "commit-message.txt does not exist."; fi
-        if [ -f "exit-message.txt" ]; then echo "exit_message=$(cat exit-message.txt)" >> $GITHUB_OUTPUT; else echo "exit-message.txt does not exist."; fi
       shell: bash
       env:
         GITHUB_ACTION_PATH: ${{ github.action_path }}
